# conduit

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  SPEC-EXTENSIONS.md
.claude/: config.json  settings.json
bridge-python/: pyproject.toml
bridge-python/src/conduit_bridge/: __init__.py  __main__.py  claude_runner.py  memory_mcp.py  protocol.py
bridge-python/tests/: test_claude_runner.py  test_main_loop.py  test_memory_mcp.py  test_protocol.py
crates/conduit-adapter-claude/: Cargo.toml
crates/conduit-adapter-claude/src/: adapter.rs  lib.rs
crates/conduit-adapter-claude/tests/: adapter_smoke.rs
crates/conduit-adapter-claude/tests/fixtures/: fake_bridge.py
crates/conduit-adapter-codex/: Cargo.toml
crates/conduit-adapter-codex/src/: adapter.rs  client.rs  event_map.rs  lib.rs  memory_mcp.rs  protocol.rs
crates/conduit-adapter-codex/tests/: adapter_smoke.rs  client_roundtrip.rs  event_map_cases.rs
crates/conduit-adapter-codex/tests/fixtures/: fake_codex.sh  fake_codex_mcp.sh  fake_env_codex.sh  fake_memory_codex.py  fake_nofile_codex.sh
crates/conduit-adapter-registry/: Cargo.toml
crates/conduit-adapter-registry/src/: lib.rs
crates/conduit-cli/: Cargo.toml
crates/conduit-cli/src/: main.rs  memory_mcp.rs
crates/conduit-cli/tests/: cli_validate.rs
crates/conduit-cli/tests/fixtures/: workflow_bad.yaml  workflow_good.yaml
crates/conduit-core/: Cargo.toml
crates/conduit-core/src/: adapter.rs  error.rs  event.rs  lib.rs
crates/conduit-core/tests/: event_roundtrip.rs  fake_adapter.rs
crates/conduit-memory/: Cargo.toml
crates/conduit-memory/src/: lib.rs
crates/conduit-orchestrator/: Cargo.toml
crates/conduit-orchestrator/src/: build.rs  config.rs  council.rs  lib.rs  state.rs  trace_export.rs
crates/conduit-orchestrator/tests/: e2e_build_review.rs  e2e_council.rs  e2e_fake.rs  e2e_memory.rs  e2e_redaction.rs  state_sqlite.rs  trace_export.rs
crates/conduit-security/: Cargo.toml
crates/conduit-security/src/: egress.rs  lib.rs  policy.rs  redact.rs  rlimits.rs  sandbox_linux.rs  sandbox_macos.rs  wrap.rs
crates/conduit-security/tests/: egress_proxy.rs  policy_defaults.rs  sandbox_deny_network.rs  sandbox_deny_write.rs
crates/conduit-security/tests/fixtures/: evil_write.sh
crates/conduit-tracker/: Cargo.toml
crates/conduit-tracker/src/: lib.rs
docs/: control-plane.md  halo.md
docs/plans/: 2026-04-29-conduit-fork.md
examples/: workflow.yaml
