[workspace]
resolver = "2"
members = [
    "crates/conduit-core",
    "crates/conduit-adapter-registry",
    "crates/conduit-adapter-codex",
    "crates/conduit-adapter-claude",
    "crates/conduit-security",
    "crates/conduit-memory",
    "crates/conduit-tracker",
    "crates/conduit-orchestrator",
    "crates/conduit-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/ShubhamDX/conduit"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"
tokio = { version = "1.40", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
